--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,7 +7,7 @@
     tools:context=".QuestionActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_question_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -16,13 +16,13 @@
         android:layout_marginBottom="8dp"
         android:text="Title"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/tv_question_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_question_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -32,13 +32,13 @@
         android:maxLines="5"
         android:text="Question text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintBottom_toTopOf="@+id/rg_answers"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_question_title" />
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/rg_answers"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -47,24 +47,28 @@
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/tv_question_text">
 
         <RadioButton
+            android:id="@+id/rb_option1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Option 1" />
 
         <RadioButton
+            android:id="@+id/rb_option2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Option 2" />
 
         <RadioButton
+            android:id="@+id/rb_option3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Option 3" />
 
         <RadioButton
+            android:id="@+id/rb_option4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Option 4" />
@@ -78,6 +82,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/rg_answers" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
